<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/mainTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="135dp"
        android:onClick="clickSave"
        android:text="@string/saveBtn"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="283dp" />

    <EditText
        android:id="@+id/serverUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/saveBtn"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/serverIp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="88dp" />

    <Button
        android:id="@+id/mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:onClick="clickMute"
        android:text="@string/Mute"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/currentVolume"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/defaultVolumeForTextView"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/actionMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:textStyle="italic"
        android:visibility="visible" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="230dp"
        android:max="100" />

    <ImageButton
        android:id="@+id/switchOffBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/saveBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="238dp"
        android:src="@drawable/power_settings_24px" />

    <ImageView
        android:id="@+id/volumeDwnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/serverUrl"
        android:layout_marginTop="262dp"
        android:visibility="visible"
        app:srcCompat="@drawable/volume_down_24px" />

    <ImageView
        android:id="@+id/volumeUpImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/saveBtn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="255dp"
        android:visibility="visible"
        app:srcCompat="@drawable/volume_up_24px" />

    <ImageView
        android:id="@+id/wifiIndicatorImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="247dp"
        android:layout_marginStart="28dp"
        android:visibility="visible"
        app:srcCompat="@drawable/wifi_on_24px" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/volumeDwnImage"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:srcCompat="@drawable/computer_24px" />

</RelativeLayout>