<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="2dp"
    tools:background="@android:color/background_light">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cancelBtn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:background="@null"
        android:src="@drawable/close_btn_24px" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/timeToOff"
        android:layout_marginBottom="223dp"
        android:text="@string/okBtnText"
        android:visibility="visible" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timeToOff"
        android:layout_alignTop="@+id/okBtn"
        android:text="@string/cancelBtnText"
        android:visibility="visible" />

    <EditText
        android:id="@+id/timeToOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="281dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/background_dark"
        android:visibility="visible" />

    <TextView
        android:id="@+id/timeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/popupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="251dp"
        android:text="@string/pupupTitleText"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        android:visibility="visible" />
</RelativeLayout>